classDiagram
  class Usuario {
    +id
    +email
    +activo
  }
  class Rol {
    +id
    +nombre
  }
  class Docente {
    +id
    +especialidad
  }
  class Estudiante {
    +id
    +codigo
  }
  class PeriodoAcademico {
    +id
    +nombre
  }
  class Curso {
    +id
    +nombre
  }
  class Grupo {
    +id
    +codigoAcceso
  }
  class Horario {
    +id
    +archivado
  }
  class Formulario {
    +id
    +titulo
  }
  class Dimension {
    +id
    +peso
  }
  class Pregunta {
    +id
    +tipo
  }
  class Evaluacion {
    +id
    +estado
  }
  class Respuesta {
    +id
    +valor
  }
  class ResultadoKdd {
    +id
    +puntaje
  }
  class Alerta {
    +id
    +nivel
  }

  Rol "1" --> "0..*" Usuario
  Usuario "1" --> "0..1" Docente
  Usuario "1" --> "0..1" Estudiante
  Curso "1" --> "0..*" Grupo
  Grupo "1" --> "0..*" Estudiante
  PeriodoAcademico "1" --> "0..*" Horario
  PeriodoAcademico "1" --> "0..*" Formulario
  PeriodoAcademico "1" --> "0..*" ResultadoKdd
  PeriodoAcademico "1" --> "0..*" Alerta
  Formulario "1" --> "1..*" Dimension
  Dimension "1" --> "1..*" Pregunta
  Formulario "1" --> "0..*" Evaluacion
  Docente "1" --> "0..*" Evaluacion
  Evaluacion "1" --> "0..*" Respuesta
  Pregunta "1" --> "0..*" Respuesta
  Docente "1" --> "0..*" ResultadoKdd
  Docente "1" --> "0..*" Alerta
